@@ -1,7 +1,7 @@
 ##########################################################################
 #  
 #  Copyright (c) 2011, John Haddon. All rights reserved.
-#  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
+#  Copyright (c) 2011-2012, Image Engine Design Inc. All rights reserved.
 #  
 #  Redistribution and use in source and binary forms, with or without
 #  modification, are permitted provided that the following conditions are
@@ -68,6 +68,7 @@ from ProceduralHolderTest import ProceduralHolderTest
 from ApplicationRootTest import ApplicationRootTest
 from WriteNodeTest import WriteNodeTest
 from ExecuteApplicationTest import ExecuteApplicationTest
+from CompoundPathFilterTest import CompoundPathFilterTest
 
 if __name__ == "__main__":
 	import unittest
